feat(api): modifier les méthodes des endpoints de profil et de compte utilisateur en GET, ajouter un filtre par mois pour les transactions

--- a/argentbank-api.yaml
+++ b/argentbank-api.yaml
@@ -193,7 +193,7 @@ paths:
           description: Internal Server Error
 
   /user/profile:
-    post:
+    get:
       security:
         - BearerAuth: []
       tags:
@@ -237,7 +237,7 @@ paths:
           description: Internal Server Error
 
   /user/account:
-    post:
+    get:
       tags:
         - Accounts and Transactions Module
       summary: All accounts
@@ -273,6 +273,12 @@ paths:
           schema:
             type: string
           description: ID of an account
+        - name: month
+          in: query
+          required: false
+          schema:
+            type: string
+          description: Month to filter transactions (format YYYY-MM, optional)
       responses:
         '200':
           description: All transactions retrieved successfully
