--- a/argentbank-api.yaml
+++ b/argentbank-api.yaml
@@ -236,7 +236,7 @@ paths:
         '500':
           description: Internal Server Error
 
-  /user/account:
+  /user/accounts:
     get:
       tags:
         - Accounts and Transactions Module
